--- a/bower.json
+++ b/bower.json
@@ -1,23 +1,19 @@
 {
-  "name": "angular",
-  "version": "0.0.0",
-  "dependencies": {
-    "angular": "^1.4.0",
-    "angular-animate": "^1.4.0",
-    "angular-sanitize": "^1.4.0",
-    "angular-aria": "1.4",
-    "pure": "~0.6.0",
-    "jquery": "1.9.1",
-    "zoomooz": "~1.1.6"
-  },
-  "devDependencies": {
-    "angular-mocks": "^1.4.0"
-  },
-  "appPath": "app",
-  "moduleName": "angularApp",
-  "resolutions": {
-    "angular": "1.4.0-rc.1",
-    "angular-animate": "^1.4.0",
-    "angular-aria": "1.4"
-  }
+    "name": "polaroiz",
+    "version": "0.1.0",
+    "dependencies": {
+        "angular": "^1.4.0",
+        "angular-route": "^1.4.0",
+        "angular-animate": "^1.4.0",
+        "angular-sanitize": "^1.4.0",
+        "angular-aria": "1.4",
+        "pure": "~0.6.0",
+        "jquery": "1.9.1",
+        "zoomooz": "~1.1.6",
+        "restangular": "~1.5.1"
+    },
+    "devDependencies": {
+        "angular-mocks": "^1.4.0"
+    },
+    "appPath": "app"
 }
