--- a/bower.json
+++ b/bower.json
@@ -2,18 +2,16 @@
     "name": "polaroiz",
     "version": "0.1.0",
     "dependencies": {
-        "angular": "^1.4.0",
-        "angular-route": "^1.4.0",
-        "angular-animate": "^1.4.0",
-        "angular-sanitize": "^1.4.0",
+        "angular": "1.4.0",
+        "angular-route": "1.4.0",
+        "angular-animate": "1.4.0",
+        "angular-sanitize": "1.4.0",
         "angular-aria": "1.4",
         "pure": "~0.6.0",
         "jquery": "1.9.1",
-        "zoomooz": "~1.1.6",
-        "restangular": "~1.5.1"
-    },
+        "zoomooz": "~1.1.6"
+},
     "devDependencies": {
-        "angular-mocks": "^1.4.0"
-    },
-    "appPath": "app"
+        "angular-mocks": "1.4.0"
+    }
 }
